# sec-xbrl-duckdb

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
sec_xbrl/: cli.py  models.py  normalize.py  pipeline.py
sec_xbrl_duckdb/: __init__.py  cli.py  client.py  db.py  parser.py  registry.py  validate.py
