[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sec-xbrl-duckdb"
version = "0.1.0"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "requests>=2.31",
    "duckdb>=1.1",
    "lxml>=5.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
validate = [
    "yfinance>=0.2",
    "pandas>=2.0",
]

[project.scripts]
sec-xbrl = "sec_xbrl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sec_xbrl"]
